[tool.poetry]
name = "fashion-mnist-gan"
version = "0.1.0"
description = "GAN using convolutional layers in the generator and discriminator on Fashion MNIST dataset"
authors = ["Szymon Budziak"]
license = "MIT"
readme = "README.md"
packages = [{ include = "src", from = "." }]

[tool.poetry.dependencies]
python = ">=3.11"
matplotlib = "^3.9.1.post1"
tensorflow = "^2.17.0"


[tool.poetry.group.dev.dependencies]
notebook = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
